# convex-typegen

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
convex/: post.ts  schema-full.ts  schema.ts
db/: schema.ts
debug/: arguments.txt  ast-full.json  ast-simple.json  ast.json  ast.txt  callee-args.json  callee.txt  debug.json  properties.json  property.txt  readme.md  value.txt
debug/convex/: users.ts
debug/dev/: declaration-1701544801.json  declaration-1701544802.json  post.ts-1701539904.json  users.ts-1701539903.json
examples/basic/: Cargo.toml  build.rs  package.json  pnpm-lock.yaml
examples/basic/convex/: post.ts  posts.ts  schema.ts  users.ts
examples/basic/convex/_generated/: api.d.ts
examples/basic/src/: main.rs  schema.rs
src/: READ-THIS-FILE  ast.rs  codegen.rs  lib.rs  main.rs  parser.rs  utils.rs
src/parser/: mod.rs  nested.rs
