[package]
name = "convex-typegen"
description = "A tool for generating Rust types from ConvexDB schema files"
authors = ["ThatGuyJamal"]
license = "MIT"
repository = "https://github.com/ThatGuyJamal/convex-typegen"
keywords = []
version = "0.0.1"
edition = "2021"

[dependencies]
oxc = { version = "0.3.0", features = ["serde"] }
serde_json = "1.0.108"
