workspace = { members = ["examples/basic"] }
[package]
name = "convex-typegen"
description = "A tool for generating Rust types from ConvexDB schema files"
authors = ["ThatGuyJamal"]
license = "MIT"
repository = "https://github.com/ThatGuyJamal/convex-typegen"
keywords = []
readme = "readme.md"
version = "0.0.1"
edition = "2021"

[dependencies]
oxc = { version = "0.3.0", features = ["serde"] }
serde_json = "1.0.108"

[dev-dependencies]
tempdir = "0.3"

[profile.dev]
opt-level = 1   # Make debug builds run faster
panic = "abort" # This leads to better optimizations and smaller binaries.

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2

[profile.release]
# debug = true # good for profilers
panic = "abort" # This leads to better optimizations and smaller binaries.