[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
convex = "0.5.0"
maplit = "1.0.2"
tokio = { version = "1.34.0", features = ["full"] }

[build-dependencies]
convex-typegen = { path = "../../" }